<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three_text">Box tree</string>
    <string name="box_four_text">Box Four</string>
    <string name="box_five_text">Box Five</string>
    <string name="howToPlay">How to play</string>
    <string name="howToPlayDesc">Tap the screen and boxes to play</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>
