<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/boxOneText"
        style="@style/Box"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/box_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/boxTwoText"
        style="@style/Box"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:text="@string/box_two"
        android:textColor="#FFFFFF"
        android:textFontWeight="@android:integer/config_mediumAnimTime"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOneText" />

    <TextView
        android:id="@+id/boxThreeText"
        style="@style/Box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_three_text"
        app:layout_constraintBottom_toTopOf="@+id/boxFourText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toTopOf="@+id/boxTwoText"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/boxFourText"
        style="@style/Box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/box_four_text"
        app:layout_constraintBottom_toTopOf="@+id/boxFiveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toBottomOf="@+id/boxThreeText" />

    <TextView
        android:id="@+id/boxFiveText"
        style="@style/Box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_five_text"
        app:layout_constraintBottom_toBottomOf="@+id/boxTwoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toBottomOf="@+id/boxFourText" />

    <TextView
        android:id="@+id/howToPlayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/howToPlay"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/howToPlayDescText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/howToPlayDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/howToPlayDesc"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/howToPlayText"
        app:layout_constraintTop_toBottomOf="@+id/boxTwoText"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/redButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/red"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/yellowButton"
        app:layout_constraintEnd_toStartOf="@+id/yellowButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yellowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/greenButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/redButton"
        app:layout_constraintTop_toBottomOf="@+id/howToPlayDescText"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/green"
        app:layout_constraintBaseline_toBaselineOf="@+id/yellowButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yellowButton" />

</androidx.constraintlayout.widget.ConstraintLayout>